[gd_scene load_steps=16 format=3 uid="uid://fhneq6mqnwas"]

[ext_resource type="Script" path="res://xr_main.gd" id="1_rr8o4"]
[ext_resource type="Script" path="res://visualizer.gd" id="1_w6j6j"]
[ext_resource type="PackedScene" uid="uid://cs36x6rbbkhyq" path="res://ui.tscn" id="2_4d2v4"]
[ext_resource type="Script" path="res://view_pyramid.gd" id="3_evk1a"]
[ext_resource type="Script" path="res://xr_origin.gd" id="4_mckb6"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="5_bh62h"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="7_2yih5"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="7_aic4n"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="8_fsmts"]
[ext_resource type="Material" uid="uid://bnr8v0xh7npjs" path="res://hand_material.tres" id="8_gs3uu"]

[sub_resource type="PrismMesh" id="PrismMesh_eh7i8"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0bn7c"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3ldv6"]

[sub_resource type="Sky" id="Sky_h0j5w"]
sky_material = SubResource("ProceduralSkyMaterial_3ldv6")

[sub_resource type="Environment" id="Environment_mmpcl"]
background_mode = 2
sky = SubResource("Sky_h0j5w")

[node name="Main" type="Node3D"]
script = ExtResource("1_rr8o4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.34795, 0.937513, 0, -0.937513, -0.34795, 0, 0, 0)

[node name="Visualizer" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-08, -1, 4.37114e-08, 1.31134e-07, 4.37114e-08, 1, -1, 8.74228e-08, 1.31134e-07, 0, 0, 0)
script = ExtResource("1_w6j6j")

[node name="CameraMarker" type="Node3D" parent="Visualizer"]

[node name="Node3D" type="Node3D" parent="Visualizer/CameraMarker"]
transform = Transform3D(-4.37114e-08, -4.37114e-08, -1, -1, -1.31362e-14, 4.37114e-08, -1.63902e-14, 1, -4.37114e-08, 0, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="Visualizer/CameraMarker"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 8.05961e-16, -9.28477e-15, 0, 1, 0, 0, 0)
mesh = SubResource("PrismMesh_eh7i8")

[node name="Node3D2" type="Node3D" parent="Visualizer/CameraMarker"]
script = ExtResource("3_evk1a")
material = SubResource("StandardMaterial3D_0bn7c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visualizer/CameraMarker/Node3D2"]

[node name="PointCloudVisualizer" type="Node3D" parent="Visualizer"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mmpcl")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
physics_interpolation_mode = 1
current = true
script = ExtResource("4_mckb6")

[node name="Left" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
tracker = &"left_hand"
pose = &"grip"

[node name="UiViewport" parent="XROrigin3D/Left" instance=ExtResource("5_bh62h")]
transform = Transform3D(-4.37114e-08, 0, 1, -1, -4.37114e-08, -4.37114e-08, 4.37114e-08, -1, 1.91069e-15, 0.0565989, -0.0281337, -0.0252427)
screen_size = Vector2(0.12, 0.165)
scene = ExtResource("2_4d2v4")
viewport_size = Vector2(240, 330)
unshaded = true
scene_properties_keys = PackedStringArray("ui.gd")

[node name="LeftHand" parent="XROrigin3D/Left" instance=ExtResource("7_2yih5")]
visible = false
hand_material_override = ExtResource("8_gs3uu")

[node name="OpenXRFbRenderModel" type="OpenXRFbRenderModel" parent="XROrigin3D/Left"]

[node name="MoveDirection" type="Marker3D" parent="XROrigin3D/Left"]
transform = Transform3D(0.962186, 0.242716, -0.123642, -0.0880075, 0.706566, 0.702153, 0.257785, -0.66472, 0.701209, 0, 0, 0)

[node name="Right" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)
tracker = &"right_hand"
pose = &"grip"

[node name="FunctionPointer" parent="XROrigin3D/Right" instance=ExtResource("7_aic4n")]
transform = Transform3D(0.992323, 0, 0.123671, -0.0874484, 0.707107, 0.701679, -0.0874484, -0.707107, 0.701679, 0, 0.0069609, -0.0069609)
show_laser = 2
laser_length = 1
show_target = true
target_radius = 0.005
suppress_radius = 0.0

[node name="RightHand" parent="XROrigin3D/Right" instance=ExtResource("8_fsmts")]
visible = false
hand_material_override = ExtResource("8_gs3uu")

[node name="OpenXRFbRenderModel" type="OpenXRFbRenderModel" parent="XROrigin3D/Right"]
render_model_type = 1

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
